# MagicView

./: CMakeLists.txt  Camera.cpp  Camera.h  Intersections.h  KDTreeCPU.cpp  KDTreeCPU.h  MyOpenGLWidget.cpp  MyOpenGLWidget.h  MyWindow.cpp  MyWindow.h  Polyhedron.h  README.md  RenderModule.cpp  RenderModule.h  Viewer.cpp  Viewer.h  WavefrontObjParser.h  main.cpp  utils.cpp  utils.h
src/: KDTreeCPU.h  MyOpenGLWidget.cpp  Polyhedron.h  RenderModule.cpp  RenderModule.h  Viewer.cpp  boundingBox.h  cudaMat4.h
